--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express-async-handler": "^1.2.0",
     "graphql": "^16.9.0",
     "graphql-http": "^1.22.1",
+    "graphql-upload": "^17.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.0"
   }
