--- a/server/package.json
+++ b/server/package.json
@@ -13,12 +13,13 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cloudinary": "^2.5.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
+    "express-fileupload": "^1.5.1",
     "graphql": "^16.9.0",
     "graphql-http": "^1.22.1",
-    "graphql-upload": "^17.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.0"
   }
