--- a/client/package.json
+++ b/client/package.json
@@ -18,10 +18,12 @@
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
     "formik": "^2.4.6",
+    "framer-motion": "^11.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-multi-carousel": "^2.8.5",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.28.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
