--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "graphql": "^16.9.0",
     "graphql-http": "^1.22.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.6.0"
+    "mongoose": "^8.6.0",
+    "uuid": "^11.0.3"
   }
 }
