--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,8 @@
     "axios": "^1.7.7",
     "formik": "^2.4.6",
     "framer-motion": "^11.13.1",
+    "graphql": "^16.9.0",
+    "graphql-request": "^7.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-multi-carousel": "^2.8.5",
