--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.3.1",
     "react-multi-carousel": "^2.8.5",
     "react-redux": "^9.1.2",
+    "react-router": "^7.5.0",
     "react-router-dom": "^6.28.0",
     "yup": "^1.4.0"
   },
