--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,14 @@
     "start": "npm run dev"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.4.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.0.2",
     "@mui/material": "^6.0.2",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
+    "dotenv": "^17.2.1",
     "formik": "^2.4.6",
     "framer-motion": "^11.13.1",
     "graphql": "^16.9.0",
