--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,8 @@
     "@mui/icons-material": "^6.0.2",
     "@mui/material": "^6.0.2",
     "@reduxjs/toolkit": "^2.2.7",
+    "@stripe/react-stripe-js": "^5.4.1",
+    "@stripe/stripe-js": "^8.5.3",
     "axios": "^1.7.7",
     "dotenv": "^17.2.1",
     "formik": "^2.4.6",
