--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.2.0",
     "mongoose": "^8.6.0",
+    "stripe": "^20.0.0",
     "uuid": "^11.0.3"
   }
 }
