--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "client": "npm start --prefix client",
     "server": "npm start --prefix server",
-    "both": "concurrently \"npm run client\" \"npm run server\""
+    "both": "concurrently \"npm run client\" \"npm run server\"",
+    "postinstall": "cd client && npm install",
+  "build": "cd client && npm run build"
   },
   "author": "Lucas Peil",
   "license": "ISC",
