--- a/package.json
+++ b/package.json
@@ -14,9 +14,26 @@
   "author": "Lucas Peil",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^2.2.0",
     "concurrently": "^8.2.2",
     "hamburger-react": "^2.5.1",
-    "node-cron": "^4.1.0"
+    "node-cron": "^4.1.0",
+    
+     "axios": "^1.11.0",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "cloudinary": "^2.5.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-async-handler": "^1.2.0",
+    "express-fileupload": "^1.5.1",
+    "express-jwt": "^8.5.1",
+    "graphql": "^16.9.0",
+    "graphql-http": "^1.22.1",
+    "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.2.0",
+    "mongoose": "^8.6.0",
+    "stripe": "^20.0.0",
+    "uuid": "^11.0.3"
   }
 }
