--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react-redux": "^9.1.2",
     "react-router": "^7.5.0",
     "react-router-dom": "^6.28.0",
+    "react-toastify": "^11.0.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
